--- a/react-portfolio/src/data/projects.json
+++ b/react-portfolio/src/data/projects.json
@@ -1,26 +1,23 @@
 [
   {
-    "title": "Project A",
+    "title": "GasMan Online",
     "imageSrc": "projects/project.png",
-    "description": "This is a project made to learn the latest languages by building an app.",
-    "skills": ["React", "Express", "Node"],
-    "demo": "https://www.example.com",
-    "source": "https://www.github.com"
+    "description": "This project was to port an anesthesiology application to a webspace.",
+    "skills": ["C++", "JavaScript", "HTML"],
+    "source": "https://sites.psu.edu/lfshowcasefa22/2022/12/05/gas-man-online/"
   },
   {
-    "title": "Project B",
+    "title": "AI Puzzle Solvers",
     "imageSrc": "projects/project.png",
-    "description": "This is a project made to learn the latest languages by building an app.",
-    "skills": ["React", "Express", "Node", "Sass"],
-    "demo": "https://www.example.com",
-    "source": "https://www.github.com"
+    "description": "This was a project to learn how to optimally solve different puzzles using AI.",
+    "skills": ["AI", "Python"],
+    "source": "https://drive.google.com/drive/folders/1JiMipONA2NzdgdfMmCXgwrtkVy1xMajw?usp=sharing"
   },
   {
-    "title": "Project C",
+    "title": "Malloc Implementation",
     "imageSrc": "projects/project.png",
-    "description": "This is a project made to learn the latest languages by building an app.",
-    "skills": ["React", "Express", "Node"],
-    "demo": "https://www.example.com",
-    "source": "https://www.github.com"
+    "description": "This is a project made to learn the implement malloc and similar functions from scratch in the most efficient way.",
+    "skills": ["C", "Optimization"],
+    "source": "https://drive.google.com/file/d/12Nqr7S6D3ofIeLgViRB-YGiUXnGItv_R/view?usp=sharing"
   }
 ]
